fixed warning in gradle build