@@ -1,3 +1,5 @@
+import org.springframework.boot.gradle.plugin.SpringBootPlugin
+
 plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'org.springframework.boot' version '3.5.0' apply false
@@ -40,5 +42,15 @@ allprojects {
 	dependencies {
 		implementation 'javax.annotation:javax.annotation-api:1.3.2'
 		implementation 'com.google.code.findbugs:jsr305:3.0.2'
+	}
+
+	subprojects {
+		tasks.configureEach { task ->
+			if (task.name.endsWith('Aot') || task.name == 'test') {
+				if (task.hasProperty('jvmArgs')) {
+					task.jvmArgs('--enable-native-access=ALL-UNNAMED')
+				}
+			}
+		}
 	}
 }
